# omop_mcp

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  cliff.toml  omop_mcp_config.template.json  pyproject.toml
.github/workflows/: release.yml
notebooks/: azure.ipynb  omop_mcp_agent.ipynb
reference/: omop_cdm_v5_4_dictionary.csv  performance_evaluation.xlsx
scripts/: batch_mapping.py  bump_version.py  test_no_mcp.py
src/omop_mcp/: __init__.py  __main__.py  agent.py  client.py  config.py  prompts.py  server.py  service.py  utils.py
src/omop_mcp/data/: omop_concept_id_fields.json
tests/: fetch_test_data.sql  prepare_test_data.ipynb  test.py
