[project]
name = "omop-mcp"
version = "0.1.0"
description = "omop medical terminology mapping"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.7.1",]
[[project.authors]]
name = "Jaerong Ahn"
email = "jaerongahn@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
omop-mcp = "omop_mcp:main"
