[project]
name = "omop_mcp"
version = "0.1.0"
description = "omop medical terminology mapping"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
 "mcp>=1.7.1",
 "mcp-use",
 "langchain-openai",
 "python-dotenv",
 "aiohttp",
 "langchain-huggingface",
 "beautifulsoup4",
 "ipykernel>=7.2.0",
]
[[project.authors]]
name = "Jaerong Ahn"
email = "jaerongahn@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit"
]

[project.scripts]
omop_mcp = "omop_mcp:main"

[tool.flake8]
ignore = "E501"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
